# faucet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  pnpm-lock.yaml
.github/: .env  file-filters.yml
.github/workflows/: build-rust-client.yml  create-release.yml  deploy-program.yml  main.yml
clients/js/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js/src/: index.ts  plugin.ts
clients/js/src/hooked/: pdas.ts
clients/js/test/: _burnBubblegumV2Asset.test.ts  _setup.ts  challenge0.test.ts  challenge1.test.ts  challenge2.test.ts  challenge3.test.ts  challenge4.test.ts  getProgram.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
clients/ui/: README.md  next.config.ts  package.json  pnpm-lock.yaml
clients/ui/app/: globals.css  layout.tsx  page.tsx
clients/ui/components/: AppWalletProvider.tsx  ChallengeCard.tsx  ChallengeDetail.tsx  Footer.tsx  Navbar.tsx  ThemeProvider.tsx  UmiProvider.tsx
clients/ui/data/: challenges.ts
clients/ui/lib/faucet/: index.ts  instructions.ts  pdas.ts  plugin.ts
clients/ui/test/: faucet.test.ts  validation.test.ts
clients/ui/types/: challenge.ts
clients/ui/utils/: assets.ts  mint.ts  validation.ts
configs/: kinobi.cjs  shank.cjs  validator.cjs
configs/scripts/program/: dump.sh
idls/: mpl_faucet.json  mpl_project_name.json
programs/mpl-faucet/: Cargo.toml  README.md
programs/mpl-faucet/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
